deploy/django-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  namespace: quizstar-portal
  labels:
    deployment: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: django-app
  template:
    metadata:
      labels:
        pod: django-app
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: docker-secret
      containers:
      - name: django-app-container
        image: sahilphule0710/django-app
        # imagePullPolicy: Never
        command: ['/bin/sh','./entrypoint.sh']
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: django-app-volume-mount
          mountPath: /django-app
      volumes:
      - name: django-app-volume-mount
        persistentVolumeClaim:
          claimName: django-app-pvc
