deploy/django-app/inspector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-inspector
  namespace: quizstar
spec:
  containers:
  - image: busybox
    name: pvc-inspector
    command: ["tail"]
    args: ["-f", "/dev/null"]
    volumeMounts:
    - name: django-volume-mount
      mountPath: /django
  volumes:
  - name: django-volume-mount
    persistentVolumeClaim:
      claimName: django-pvc
