deploy/django-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: quizstar-portal
spec:
  type: NodePort
  selector:
    pod: django-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 30002
