deploy/django-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  namespace: quizstar-portal
spec:
  rules:
    - host: quizstar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-app-service
                port:
                  number: 8000
